== update version 15.0.7 ==

  * golang.sh: Fix arch for aarch64

== update version 15.0.6 ==

  * always use -buildmode=pie

== update version 15.0.5 ==

  * Fix Requires/Provides issue with split packages
  * Remove unused variables

== update version 15.0.4 ==

  * Include go API version in GOPATH and macros
  * Fix Requires and Provides

== update version 15.0.3 ==

  * Remove duplicates when finding Requires

== update version 15.0.2 ==

  * Set correct modifier when running build with no arguments

== update version 15.0.1 ==

  * Fix crash when running build or test with no argument

== update version 15.0.0 ==

  * Total refactoring of the codebase, dropped the ruby dependency and now we
    are also using pure bash and go tooling

== update version 14.9.2 ==

  * Added go_nostrip macro to disable stripping of debug information and to
    disable a debug package

== update version 14.9.1 ==

  * simplify rpmsysinfo.rb: don't guess variables' values can be passed in by
    RPM environment variables. use RbConfig to get libdir.
  * support s390x architecture

== update version 14.9.0 ==

  * Remove runtime dependency for Go API

== update version 14.8.1 ==

  * bugfix release
  * fix a typo in cli.rb
  * increase timeout to 300s, or go install can't finish itself sometimes

== update version 14.8 ==

  * rpmsysinfo.rb: fix encoding problem in open()
  * cli.rb: ruby 1.8.7 doesn't support passing environment variables in open(),
    some commands/tests need time to finish, an immediate io.close() will get us
    wrong exitstatus (broken pipe, code 13). so use 'timeout' module with a 30s
    and process.wait for them to quit successfully
  * golang.req: the oniguruma in ruby 1.8.7 doesn't support named group in
    regexp. so ditch the named group used in go_get_version()

== update version 14.7 ==

  * do not hardcode go version

== update version 14.6 ==

  * fix rbarch for Power Archtectures

== update version 14.5 ==
